# fast-flake-update

./: .gitignore  .mergify.yml  README.md  flake.nix  pyproject.toml  treefmt.nix
.github/workflows/: update-flake-lock.yml
fast_flake_update/: __init__.py
